--- a/services/analysis_service/Dockerfile
+++ b/services/analysis_service/Dockerfile
@@ -5,7 +5,6 @@ COPY requirements.txt /app
 RUN python -m pip install --upgrade pip && pip install -r /app/requirements.txt
 
 WORKDIR /app
-ENTRYPOINT exec python data_service.py \
-    ${DB_URL:-"postgresql+asyncpg://postgres:postgres@localhost/inford_db"} \
+ENTRYPOINT exec python analysis_service.py \
     ${REST_PORT:-5000} \
     ${REST_HOST:-"127.0.0.1"}
